RESOLVED FIXED52951
WebKit2 generates a bad PDF for cross process messaging
https://bugs.webkit.org/show_bug.cgi?id=52951
Summary WebKit2 generates a bad PDF for cross process messaging
Alexey Proskuryakov
Reported 2011-01-21 23:43:26 PST
It's offset down by frame.height - page.height, so most pages draw outside PDF media box. While the error in web process is compensated by a symmetrical error in UI process, nothing guarantees that CGPDFContext won't discard the data outside media box.
Attachments
proposed fix (2.74 KB, patch)
2011-01-21 23:46 PST, Alexey Proskuryakov
mitz: review+
patch for landing (2.49 KB, patch)
2011-01-21 23:56 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-01-21 23:46:17 PST
Created attachment 79832 [details] proposed fix
mitz
Comment 2 2011-01-21 23:49:08 PST
Comment on attachment 79832 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=79832&action=review > Source/WebCore/ChangeLog:21 > +2011-01-21 Alexey Proskuryakov <ap@apple.com> > + > + Reviewed by NOBODY (OOPS!). > + > + Need a short description and bug URL (OOPS!) > + > + No new tests. (OOPS!) > + > + * page/PrintContext.cpp: > + (WebCore::PrintContext::spoolRect): > + Redundant change log entry.
Alexey Proskuryakov
Comment 3 2011-01-21 23:56:11 PST
Created attachment 79833 [details] patch for landing Oops.
WebKit Commit Bot
Comment 4 2011-01-22 00:22:09 PST
Comment on attachment 79833 [details] patch for landing Clearing flags on attachment: 79833 Committed r76433: <http://trac.webkit.org/changeset/76433>
WebKit Commit Bot
Comment 5 2011-01-22 00:22:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.