2011-01-22  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=52951
        WebKit2 generates a bad PDF for cross process messaging

        * page/PrintContext.cpp: (WebCore::PrintContext::spoolRect): Use a correct offset to actually
        draw inside the requested rectangle.
2011-01-22  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=52951
        WebKit2 generates a bad PDF for cross process messaging

        * UIProcess/API/mac/WKView.mm:
        (-[WKView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):
        Use a correct offset when flipping.

Canonical link: https://commits.webkit.org/66667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76433 268f45cc-cd09-0410-ab3c-d52691b4dbfc